# FMMMoM

./: CMakeLists.txt
include/: input_parser.h  mom.h  my_math.h
src/: FieldData.cxx  input_parser.cpp  mom.cpp  my_math.cpp
test/: example.cfg
test/testing_meshes/: Mesh_1.cgns  Mesh_1.med  Mesh_1.mesh  Mesh_1.sauv  Mesh_1.stl  Mesh_1.unv
